kube/graveyard/arr/jackett/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
  labels:
    app.kubernetes.io/name: jackett
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jackett
  ports:
  - name: http
    port: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app.kubernetes.io/name: jackett
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - jackett.matthew-stratton.me
    secretName: jackett-tls
  rules:
  - host: jackett.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: jackett
            port:
              number: 9117
        path: /
        pathType: Prefix
